# rlmkit

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  count_lines.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  baseline_prompt.py
benchmarks/comparison/: README.md  run.py
benchmarks/oolong/: README.md  aggregate.py  run.py  run_ablations.sh  scoring.py  viz.py
docs/: blog.md  control.md  index.md  injections.md  internals.md  observability.md  positioning.md  prompt_customization.md  prompt_reliability.md  repl_yield_protocol.md  resume_semantics.md  rlm_animation.py  runtimes.md  security.md  trace_viz.ipynb
docs/internal/: autoresearch_brainstorm.md  autoresearch_run_failure_analysis.md  engine_simplification_plan.md  workspace_viewer_model.md
example-workspaces/needle-haystack-context/: graph.json
example-workspaces/needle-haystack-filesystem/: graph.json
example-workspaces/needle-haystack-filesystem/haystack/: file_0000.txt  file_0001.txt  file_0002.txt  file_0003.txt  file_0004.txt  file_0005.txt  file_0006.txt  file_0007.txt  (+42 more)
example-workspaces/summarizer/: graph.json
examples/: README.md  agent.py  async_children.py  basic.py  best_of_n.py  blog_needle_graph.py  custom_agent.py  deep_research.py  drop_in_llm.py  dspy_drop_in.py  eager_children.py  fork_repair.py  injections.py  llm_query_batched.py  needle_haystack.py  needle_haystack_filesystem.py  run_examples.py  showcase.py  summarizer.py  utils.py  view_demo.py  viz.py
examples/autoresearch/: README.md  autoresearch.py
examples/coding-agent/: agent.py
examples/deep_research/: deep_research.py  program.md
examples/graph-features/: 01_query.py  02_navigate.py  03_mutate.py  04_save_load.py  05_replay.py  06_fork.py  07_render.py  README.md
examples/notebooks/: coding_agent.ipynb  node_basics.ipynb  viz_walkthrough.ipynb
examples/sandbox/: README.md  daytona_agent.py  e2b_agent.py  modal_agent.py
rlmflow/: __init__.py  cli.py  config.py  llm.py  llm_channel.py  node.py  pool.py  rlm.py  scheduler.py
rlmflow/engine/: __init__.py  actions.py  code.py  config.py  messages.py  replay.py  scheduler.py  scheduling.py  seq.py  sessions.py  transcript.py  transitions.py
rlmflow/graph/: __init__.py  graph.py  handles.py  injection.py  node.py  timeline.py  views.py
rlmflow/integrations/: __init__.py  dspy.py
rlmflow/prompts/: __init__.py  builder.py  default.py  messages.py  projection.py
rlmflow/runtime/: __init__.py  docker.py  env.py  local.py  modal.py  repl.py  runtime.py  subprocess.py
rlmflow/tools/: __init__.py  builtins.py  context.py  filesystem.py  registry.py
rlmflow/utils/: __init__.py  code.py  export.py  pool.py  trace.py  tracing.py  viewer.py  viz.py
rlmflow/workspace/: __init__.py  base.py  context.py  context_helpers.py  filesystem.py  graph_load.py  memory.py  session.py  session_view.py  store.py  sync.py  workspace.py
rlmkit/: __init__.py  cli.py  context.py  llm.py  node.py  pool.py  prompts.py  rlm.py  sandbox.py  session.py  state.py  utils.py
rlmkit/logging/: __init__.py  base.py  rich.py
rlmkit/prompts/: __init__.py  builder.py  default.py  messages.py
rlmkit/runtime/: __init__.py  docker.py  local.py  modal.py  repl.py  runtime.py  sandbox.py  subprocess.py
rlmkit/tools/: __init__.py  filesystem.py  tools.py
rlmkit/utils/: __init__.py  export.py  trace.py  utils.py  viewer.py  viz.py
rlmkit/workspace/: __init__.py  context.py  session.py  workspace.py
tests/: helpers.py  test_builtins.py  test_code_blocks.py  test_docker_runtime.py  test_dspy_integration.py  test_engine.py  test_filesystem_tools.py  test_final_answer_exhaustion.py  test_llm_channel.py  test_nested_delegation.py  test_pool_creation.py  test_prompt_capabilities.py  test_prompt_rendering.py  test_release_contract.py  test_repl_yield.py  test_replay_log.py  test_rlmflow_core.py  test_sandbox_runtimes.py  test_save_api.py  test_session_fork.py  test_session_variable.py  test_subprocess_runtime.py  test_timeline.py  test_viz.py  test_workspace_sync.py
tests/fakes/: sandbox.py
tests/integration/: test_cli.py  test_control.py  test_docker_runtime.py  test_fork_resume.py  test_node_first_replay.py  test_observability.py  test_replay_branch.py  test_viz_exports.py
(+1221 files in other folders)
