[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlmkit"
version = "0.1.0"
description = "A state-machine framework for recursive LLM agents in ~1,200 lines of Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shyam Sudhakaran", email = "shyamsnair@protonmail.com" },
]
keywords = ["llm", "agent", "recursive", "state-machine", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
viewer = ["gradio>=4.0"]
all = ["openai>=1.0", "anthropic>=0.20", "gradio>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ShyamSS-95/rlmkit"
Repository = "https://github.com/ShyamSS-95/rlmkit"
Issues = "https://github.com/ShyamSS-95/rlmkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["rlmkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
