[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlmflow"
version = "0.3.2"
description = "Build Recursive Language Models as inspectable execution graphs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shyam Sudhakaran", email = "shyamsnair@protonmail.com" },
]
keywords = ["llm", "agent", "recursive", "graph", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
dspy = ["dspy"]
modal = ["modal"]
e2b = ["e2b"]
daytona = ["daytona-sdk"]
sandbox = ["modal", "e2b", "daytona-sdk"]
# Gradio viewer pulls plotly transitively (used by the interactive timeline).
# `rich` powers the live terminal tree (`LiveView`) and `rlmflow view` output.
viewer = ["gradio>=4.29", "plotly>=5.0", "rich>=13.0"]
# Static image export of `node.plot()` (PNG/SVG/PDF). Used by
# `save_image` / `save_steps` and `node.save_image()`. Kaleido is its
# own optional dep because it ships native binaries.
image = ["plotly>=5.0", "kaleido>=0.2.1"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "dspy",
    "modal",
    "e2b",
    "daytona-sdk",
    "gradio>=4.29",
    "plotly>=5.0",
    "kaleido>=0.2.1",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/shyamsn97/rlmflow"
Repository = "https://github.com/shyamsn97/rlmflow"
Issues = "https://github.com/shyamsn97/rlmflow/issues"

[project.scripts]
rlmflow = "rlmflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rlmflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
# ``pytest-timeout`` is listed in the ``dev`` optional dependencies. If a test
# ever hangs (REPL stdio deadlock, runaway proxy loop), this caps the damage
# instead of the whole CI job stalling for hours.
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["rlmflow"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["examples/notebooks", "examples/data"]
